k8s-manager/k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: hamamooz

spec:
  selector:
    app: backend

  ports:
    - name: http
      port: 80
      targetPort: 8000

  type: ClusterIP
