k8s-manager/k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend
  namespace: hamamooz

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik

  rules:
    - host: api.ahmadi.osdl.ir

      http:
        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: backend

                port:
                  number: 80
